Changed colors, fixed section spacing

--- a/scss/base/base.scss
+++ b/scss/base/base.scss
@@ -19,22 +19,45 @@ html {
 	font-family: var(--font);
 	color: var(--color-font);
 	scroll-behavior: smooth;
+	scroll-padding: 18rem;
 }
 
 body {
 	position: relative;
+	background-color: var(--color-bg);
 }
 
 section {
 	width: 100%;
-	height: 100vh;
-	padding: 7rem 0;
+	height: 100%;
 	position: relative;
+	background-color: var(--color-bg);
+	margin-bottom: 15rem;
+}
+
+.section-main {
+	width: 100%;
+	height: 100vh;
+	padding: 7rem 0 0 0;
 	background-color: var(--color-bg);
 }
 
-.container {
+.section-test {
+	width: 100%;
+	height: 100%;
+	padding: 7rem 0;
 	background-color: var(--color-main);
+}
+
+.container-main {
+	background-color: var(--color-main);
+	height: 100%;
+	min-width: 100%;
+	margin: auto;
+}
+
+.container {
+	background-color: var(--color-bg);
 	height: 100%;
 	min-width: 100%;
 	margin: auto;
