--- a/scss/base/typo.scss
+++ b/scss/base/typo.scss
@@ -5,19 +5,19 @@ h1 {
 }
 
 h3 {
-	color: var(--color-font);
+	color: var(--color-main);
 	font-size: 3.6rem;
 	margin-bottom: 2.4rem;
 }
 
 h4 {
-	color: var(--color-font);
-	font-size: 3rem;
+	color: var(--color-main);
+	font-size: 2rem;
 	margin-bottom: 1.2rem;
 }
 
 h5 {
-	color: var(--color-font);
+	color: var(--color-main);
 	font-size: 1.6rem;
 	margin-bottom: .4rem;
 }
@@ -26,4 +26,5 @@ h5 {
 	font-size: var(--fontsize-normal);
 	line-height: var(--font-lineheigth);
 	margin-bottom: 1.6rem;
+	color: var(--color-main);
 }
