--- a/scss/layout/contact.scss
+++ b/scss/layout/contact.scss
@@ -6,7 +6,7 @@
 		width: 100%;
 		height: 100%;
 		display: flex;
-		justify-content: center;
+		justify-content: flex-start;
 		align-items: center;
 
 		&--wrapper {
@@ -31,7 +31,7 @@
 			font-size: var(--fontsize-normal);
 
 			&:focus {
-				border: 3px solid var(--color-accent);
+				border: 3px solid var(--color-main);
 			}
 
 			&:focus:invalid {
@@ -51,7 +51,7 @@
 			font-size: var(--fontsize-normal);
 
 			&:focus {
-				border: 3px solid var(--color-accent);
+				border: 3px solid var(--color-main);
 			}
 
 			&:focus:invalid {
@@ -62,7 +62,7 @@
 		&--btn {
 			width: 100%;
 			padding: 1rem 2rem;
-			border: 3px solid var(--color-main);;
+			border: 3px solid var(--color-bg);;
 			border-radius: var(--border-radius);
 			cursor: pointer;
 			background-color: var(--color-accent);
@@ -77,14 +77,14 @@
 			}
 
 			&:hover {
-				background-color: var(--color-main);
+				background-color: transparent;
 				color: var(--color-accent);
 				border: 3px solid var(--color-accent);
 			}
 
 			&:active {
 				background-color: var(--color-active);
-				border: 3px solid var(--color-main);
+				border: 3px solid var(--color-active);
 				color: var(--color-font);
 			}
 		}
@@ -94,7 +94,7 @@
 		width: 100%;
 		height: 100%;
 		display: flex;
-		justify-content: center;
+		justify-content: flex-end;
 		align-items: center;
 
 		&--link:link,
@@ -105,7 +105,7 @@
 			gap: 1.6rem;
 			font-size: 1.8rem;
 			text-decoration: none;
-			color: var(--color-font);
+			color: var(--color-main);
 			margin-bottom: 3.2rem;
 			transition: color 0.3s;
 		}
