--- a/scss/layout/footer.scss
+++ b/scss/layout/footer.scss
@@ -1,7 +1,7 @@
 @use "../abstracts/variables";
 
 .footer {
-	background-color: var(--color-bg);
+	background-color: var(--color-main);
 	height: 7rem;
 	width: 100%;
 	display: flex;
