--- a/scss/layout/projects.scss
+++ b/scss/layout/projects.scss
@@ -4,10 +4,12 @@
 .projects {
 	width: 1600px;
 	height: 500px;
-	border: 3px solid var(--color-bg);
-	border-radius: var(--border-radius);
 	overflow: hidden;
 	position: relative;
+
+	&__text {
+		color: var(--color-font) !important;
+	}
 
 	&__slides {
 		width: 300%;
@@ -50,7 +52,6 @@
 			&--left {
 				width: 50%;
 				height: 100%;
-				padding: 5rem;
 				display: flex;
 				align-items: center;
 				justify-content: flex-start;
@@ -59,13 +60,12 @@
 			&--right {
 				width: 50%;
 				height: 100%;
-				padding: 5rem;
 				display: flex;
-				justify-content: center;
+				justify-content: flex-end;
 				align-items: center;
 
 				& img {
-					height: 150%;
+					height: 100%;
 					width: auto;
 				}
 			}
@@ -95,3 +95,4 @@
 #r3:checked ~ .s1 {
 	margin-left: -66.68%;
 }
+
